tests/negative/gold/default_values6_test.gold
tests/negative/default_values6_test.toit:5:17: error: Default value can't be a block
foo [x] --named=x:
                ^
tests/negative/default_values6_test.toit:6:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/default_values6_test.toit:8:10: error: Block parameters may not have a default value.
foo2 [x] [--named]=x:
         ^~~~~~~~
tests/negative/default_values6_test.toit:8:20: error: Default value can't be a block
foo2 [x] [--named]=x:
                   ^
tests/negative/default_values6_test.toit:9:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/default_values6_test.toit:11:11: error: Block parameters may not have a default value.
foo2b [x] [--named=x]:
          ^~~~~~~~
tests/negative/default_values6_test.toit:11:20: error: Default value can't be a block
foo2b [x] [--named=x]:
                   ^
tests/negative/default_values6_test.toit:12:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/default_values6_test.toit:14:6: error: Block parameters may not have a default value.
foo3 [x=(:499)]:
     ^~
tests/negative/default_values6_test.toit:14:10: error: Unexpected block
foo3 [x=(:499)]:
         ^~~~
tests/negative/default_values6_test.toit:14:9: error: Default value can't be a block
foo3 [x=(:499)]:
        ^
tests/negative/default_values6_test.toit:15:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/default_values6_test.toit:17:7: error: Block parameters may not have a default value.
foo3b [x]=(:499):
      ^~
tests/negative/default_values6_test.toit:17:12: error: Unexpected block
foo3b [x]=(:499):
           ^~~~
tests/negative/default_values6_test.toit:17:11: error: Default value can't be a block
foo3b [x]=(:499):
          ^
tests/negative/default_values6_test.toit:18:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/default_values6_test.toit:20:10: error: Block parameters may not have a default value.
foo4 [x] [y]=x:
         ^~
tests/negative/default_values6_test.toit:20:14: error: Default value can't be a block
foo4 [x] [y]=x:
             ^
tests/negative/default_values6_test.toit:21:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed.
